# AGENTIC-QUANT

./: .gitignore  README.md
agentic-quant/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_windows.ps1  test_mt5_connect.py  test_pipeline.py
agentic-quant/.github/workflows/: build.yml
agentic-quant/config/: killzones.yaml  model_params.yaml  news_weights.yaml  system.yaml
agentic-quant/core/: __init__.py  main.py
agentic-quant/core/ai_engine/: __init__.py
agentic-quant/core/ai_engine/feature_engineering/: __init__.py  bsl_ssl_registry.py  displacement_engine.py  equal_levels_detector.py  fvg_ob_scanner.py  ict_structure_mapper.py  liquidity_pool_indexer.py  pipeline.py  smc_detector.py  types.py
agentic-quant/core/ai_engine/multi_agent/: __init__.py  bear_agent.py  bull_agent.py  critic_agent.py  debate_orchestrator.py  rule_fallback.py  technical_brief.py
agentic-quant/core/ai_engine/neural/: __init__.py  config.py  hierarchical_lstm_ae.py  lstm_inference.py  usv_projector.py
agentic-quant/core/ai_engine/xgboost/: __init__.py  ensemble.py  feature_builder.py  inference.py  model_a.py  model_b.py
agentic-quant/core/backtesting/: __init__.py  drift_detector.py  event_driven_simulator.py  fine_tuning.py  ic_calculator.py  regime_shift_detector.py  report_generator.py  run.py
agentic-quant/core/config/: __init__.py  schemas.py
agentic-quant/core/ingestion/: __init__.py  desync_detector.py  historical_tick_loader.py  itq_queue.py  mt5_connector.py  mt5_simulator.py  mtf_synchronizer.py  ohlcv_aggregator.py  tick_frame.py  tick_receiver.py  tv_webhook.py  volumetrics_engine.py
agentic-quant/core/ipc/: __init__.py  broadcast_dispatcher.py  message_schema.py  websocket_server.py
agentic-quant/core/macro/: __init__.py  calendar_scraper.py  macro_engine.py  news_vectorizer.py  regime_classifier.py  volatility_countdown.py
agentic-quant/core/memory/: __init__.py  debate_archiver.py  outcome_determinator.py
agentic-quant/core/memory/long_term/: __init__.py  rag_retriever.py  sqlite_history_store.py  vectordb_adapter.py
agentic-quant/core/memory/models/: __init__.py  enums.py  prediction.py  zone.py
agentic-quant/core/utils/: __init__.py  logging.py  metrics.py  timing.py
agentic-quant/desktop/src-tauri/: Cargo.toml  tauri.conf.json
agentic-quant/docs/runbooks/: deployment_guide.md  incident_response.md
agentic-quant/scripts/: __init__.py  bootstrap.sh  build_lstm_dataset.py  download_weights.py  evaluate_models.py  run_backtest.sh  train_lstm.py  train_model_a.py  train_model_b.py  train_models.sh
agentic-quant/scripts/migrations/: __init__.py  migration_001_initial_schema.sql  migration_002_add_indexes.sql
agentic-quant/tests/backtest_scenarios/: __init__.py
agentic-quant/tests/benchmark/: __init__.py  test_latency.py
agentic-quant/tests/integration/: __init__.py  conftest.py  test_e2e_pipeline.py  test_module1_integration.py  test_module_boundaries.py
agentic-quant/tests/security/: __init__.py  test_security.py
agentic-quant/tests/stress/: __init__.py  test_stress.py
agentic-quant/tests/unit/: __init__.py  test_config_schemas.py  test_event_bus.py  test_feature_engineering.py  test_macro_engine.py  test_memory_engine.py  test_mt5_connector.py  test_ohlcv_aggregator.py  test_tick_frame.py  test_timing.py
agentic-quant/ui/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
agentic-quant/ui/dist-node/: tsconfig.node.tsbuildinfo  vite.config.js
agentic-quant/ui/src/: App.tsx  index.css  main.tsx
document/: prompt.md  (+3 more)
(+34 files in other folders)
