[project]
name = "agentic-quant"
version = "0.1.0"
description = "AI-powered multi-agent trading system"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "nguyenthedaiyt-droid" }]
license = { text = "MIT" }

dependencies = [
    # Core runtime
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "pydantic>=2.9.0",
    "loguru>=0.9.0",
    "msgpack>=1.0.0",

    # Networking
    "pyzmq>=26.0.0",
    "websockets>=13.0.0",
    "aiohttp>=3.10.0",

    # Database
    "redis>=5.2.0",
    "aiosqlite>=0.20.0",

    # Vector DB
    "qdrant-client>=1.12.0",
    "chromadb>=0.4.0",

    # ML
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "optuna>=4.0.0",

    # Prometheus
    "prometheus-client>=0.21.0",

    # Utilities
    "orjson>=3.10.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "httpx>=0.28.0",
    "fakeredis>=2.26.0",
    "hypothesis>=6.115.0",
]
ml = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tensorboard>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration", "tests/benchmark", "tests/stress", "tests/security"]
markers = [
    "slow: runs slowly",
    "integration: integration tests",
    "backtest: backtest-related tests",
    "unit: unit tests",
    "ml: requires ML libraries",
    "benchmark: benchmark / latency tests",
    "stress: stress / throughput tests",
    "security: security tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["core"]
omit = ["tests/**", "scripts/**", "**/__pycache__/**"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "C4", "DTZ", "T20", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SLF", "SIM", "TCH", "ARG", "PTH"]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "S101",    # assert
    "S105",    # hardcoded password
    "B028",    # no-explicit-stacklevel
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/", "scripts/", "node_modules/"]
