[package]
name = "agentic-quant-desktop"
version = "0.1.0"
edition = "2021"
authors = ["AGENTIC-QUANT Team"]
description = "AGENTIC-QUANT — Hybrid Agentic Quantitative Trading Framework (Desktop Shell)"
license = "PROPRIETARY"
rust-version = "1.75"

[lib]
name = "agentic_quant_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "agentic-quant-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
